--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,12 +33,22 @@
       </div>
 
       <div class="file-input-group">
-        <label class="file-input-label">MCMC Chain (.txt)</label>
-        <input type="file" id="upload-chain" accept=".txt,.dat">
-        <div class="progress-container" id="progress-chain">
-          <div class="progress-bar" id="progress-bar-chain"></div>
+        <label class="file-input-label">Posterior Skymap (.txt / .npy)</label>
+        <input type="file" id="upload-posterior" accept=".txt,.dat,.npy">
+        <div class="progress-container" id="progress-posterior">
+          <div class="progress-bar" id="progress-bar-posterior"></div>
         </div>
-        <div id="status-chain" class="status-text"></div>
+        <div id="status-posterior" class="status-text"></div>
+        <div style="margin-top: 6px;">
+          <select id="preloaded-skymap"
+            style="width: 100%; padding: 6px 8px; background: rgba(15, 23, 42, 0.8); border: 1px solid rgba(71, 85, 105, 0.5); border-radius: 6px; color: #e2e8f0; font-size: 10px; font-family: inherit; cursor: pointer;">
+            <option value="">— Select a pre-loaded skymap —</option>
+          </select>
+        </div>
+        <button id="btn-clear-posterior"
+          style="margin-top: 6px; width: 100%; padding: 6px 8px; font-size: 10px; background: rgba(239, 68, 68, 0.15); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 6px; color: #f87171; cursor: pointer; font-family: inherit; transition: all 0.2s;"
+          onmouseover="this.style.background='rgba(239, 68, 68, 0.25)'"
+          onmouseout="this.style.background='rgba(239, 68, 68, 0.15)'">✕ Clear Posterior</button>
       </div>
 
       <!-- Search Box -->
@@ -209,7 +219,8 @@
   <script>
     window.galaxyAppData = {
       pulsars: {{ PULSARS_JSON }},
-      galaxies: {{ GALAXIES_JSON }}
+      galaxies: {{ GALAXIES_JSON }},
+      healpixFiles: {{ HEALPIX_FILES_JSON }}
     };
   </script>
   <script>
